--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter&family=Monoton&family=Montserrat&display=swap');
 html {
     scroll-behavior: smooth;
 }
@@ -12,7 +13,7 @@ body {
 
 /*footer*/
 
-footer {
+.footer {
     height: 120px;
     background-color: black;
     display: flex;
@@ -21,7 +22,7 @@ footer {
     align-items: center;
 }
 
-footer p {
+.footer p {
     text-align: center;
     font-size: xx-large;
     font-family: Inter, sans-serif;
@@ -31,14 +32,46 @@ footer p {
     text-transform: capitalize;
 }
 
+#background-video,
+#loader-video {
+    height: 100vh;
+    width: 100vw;
+    object-fit: cover;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: -1;
+}
+
+#mydDiv {
+    display: none;
+}
+
+
+/*header*/
+
 .navbar {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    /* height: 250px; */
     align-items: center;
     padding: 42px;
-    background: rgba(0, 0, 0, 0.7);
+}
+
+.navbar a {
+    color: white;
+    text-decoration: none;
+    font-size: x-large;
+    padding: 5px;
+    font-family: 'Inter', sans-serif;
+    text-shadow: 0 0 11px #fffbfb;
+}
+
+.logo {
+    font-size: xx-large;
+    font-family: 'Monoton', sans-serif;
 }
 
 .audio-container {
@@ -50,18 +83,33 @@ footer p {
 
 audio#audioPlay {
     filter: opacity(0.5);
+    width: 100px;
 }
 
-.navbar a {
-    color: white;
-    text-decoration: none;
-    font-size: x-large;
-    padding: 5px;
+
+/*main*/
+
+#jeux h2,
+#actualite h2,
+#contact h2 {
+    display: block;
+    font-weight: 800;
+    font-family: 'Inter', sans-serif;
+    font-size: 50px;
+    text-transform: uppercase;
+    text-align: center;
+    letter-spacing: 0.2rem;
+    color: transparent;
+    position: relative;
+    text-shadow: 1px 1px 1px rgba(248, 247, 247, 0.7);
+    animation: flickering 2s linear infinite both;
+    animation-duration: 1.5s;
+    overflow: hidden;
+    transition: .12s;
 }
 
-.logo {
-    font-size: xx-large;
-}
+
+/*section 1*/
 
 #bienvenue {
     display: flex;
@@ -69,18 +117,6 @@ audio#audioPlay {
     justify-content: center;
     align-items: center;
     height: 980px;
-}
-
-#background-video {
-    height: 100vh;
-    width: 100vw;
-    object-fit: cover;
-    position: fixed;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    z-index: -1;
 }
 
 .content {
@@ -93,15 +129,21 @@ audio#audioPlay {
 
 .content h1 {
     font-size: 153px;
+    font-family: 'Monoton', sans-serif;
+    color: yellow;
+    font-weight: 100;
 }
 
 .content h2 {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
+
+/*section 2*/
+
 #actualite {
-    height: 980px;
-    background-color: black;
+    height: 960px;
+    background-color: #000000cf;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -112,7 +154,8 @@ audio#audioPlay {
 #actualite p {
     width: 77%;
     text-align: center;
-    font-size: xx-large;
+    font-size: x-large;
+    font-family: 'Inter', sans-serif;
 }
 
 .droite_actualite {
@@ -134,6 +177,15 @@ audio#audioPlay {
     align-items: center;
 }
 
+.gauche img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+/*section 3*/
+
 .droite_jeux,
 .gauche_jeux {
     width: 50%;
@@ -144,20 +196,21 @@ audio#audioPlay {
     align-items: center;
 }
 
-.gauche img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
 #jeux {
     height: 980px;
-    background-color: rgb(151, 36, 180);
+    background-color: rgb(151 36 180 / 64%);
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+}
+
+#jeux p {
+    width: 77%;
+    text-align: center;
+    font-size: x-large;
+    font-family: 'Inter', sans-serif;
 }
 
 #video_jeu {
@@ -178,29 +231,6 @@ audio#audioPlay {
     border-radius: 10%;
     margin-left: 30px;
     flex-wrap: wrap;
-}
-
-#jeux h2,
-#actualite h2,
-#contact h2 {
-    display: block;
-    font-weight: 800;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 50px;
-    text-transform: uppercase;
-    text-align: center;
-    letter-spacing: 0.2rem;
-    color: transparent;
-    position: relative;
-    text-shadow: 1px 1px 1px rgba(248, 247, 247, 0.7);
-    animation: flickering 2s linear infinite both;
-    animation-duration: 1.5s;
-    overflow: hidden;
-    transition: .12s;
-}
-
-#jeux p {
-    font-size: x-large;
 }
 
 
@@ -338,13 +368,17 @@ label {
     flex-direction: column;
 }
 
+
+/*_________________version mobile________________*/
+
 @media only screen and (max-width: 767px) {
+    /*element global*/
     .navbar {
         flex-direction: column;
         padding: 15px;
     }
     .logo {
-        visibility: hidden;
+        color: yellow;
     }
     footer {
         height: 160px;
@@ -361,14 +395,20 @@ label {
     audio#audioPlay:hover {
         filter: opacity(1);
     }
+    /*main*/
+    /*s1 : bienvenue*/
     #bienvenue {
-        height: 280px;
+        height: auto;
+        padding: 50px;
+    }
+    .content {
+        display: none;
     }
     .content h1 {
-        font-size: 56px;
+        visibility: hidden;
     }
     .content h2 {
-        font-size: 23px;
+        visibility: hidden;
     }
     .gauche {
         display: none;
@@ -378,12 +418,13 @@ label {
     #contact h2 {
         font-size: 30px;
     }
-    #actualite p {
-        width: 250px;
-        font-size: x-large;
+    /*s1:actualite*/
+    .droite_actualite {
+        width: 100%;
     }
+    /*s3:actualite*/
     #jeux {
-        height: 830px;
+        height: 1070px;
     }
     .galerie {
         flex-direction: column;
@@ -394,6 +435,7 @@ label {
     .gauche_jeux {
         width: 100%;
     }
+    /*contact*/
     .gauche_contact {
         display: none;
     }
